<resources>
    <!-- network setting -->
    <string name="setting.network.name">Network Setting</string>
    <string name="setting.network.hs.name">Bitpie Hot Send Server</string>
    <string name="setting.network.cr.name">Bitpie Cold Receive Server</string>
    <string name="setting.network.vtest.name">VWeb Server</string>

    <string name="app_name">ChainCloud-V</string>
    <string name="setting_version">ChainCloud-V v%1$s build %2$d %3$s</string>
    <string name="tab_message">Message</string>
    <string name="tab_account">Account</string>
    <string name="tab_setting">Setting</string>
    <string name="address_balance">Balance</string>
    <string name="activity_name_address_detail">Detail</string>
    <string name="tx_out_status_unspent_name">Unspent</string>
    <string name="tx_out_status_spent_name">Spent</string>
    <string name="just_now">Just Now</string>
    <string name="receive_btc">Receive</string>
    <string name="send_btc">Send</string>
    <string name="close">Close</string>
    <string name="address_history_receive">Receive Address History</string>
    <string name="address_history_change">Change Address History</string>
    <string name="address_hot_check">Hot Address</string>
    <string name="address_cold_check">Cold Address</string>
    <string name="loading">Loading</string>
    <string name="me_address_copied">Address Copied</string>
    <string name="tx.detail.title">Tx Detail</string>
    <string name="tx.time">Tx At</string>
    <string name="tx.confirmations">Confirmations</string>
    <string name="tx.hash">Tx Hash</string>
    <string name="tx.value">Tx Value</string>
    <string name="tx.fee">Fee</string>
    <string name="tx.size">Tx Size</string>
    <string name="tx.vsize">Tx VSize</string>
    <string name="tx.input">Tx Inputs</string>
    <string name="tx.output">Tx Outputs</string>
    <string name="tx_detail_view_on_blockchain_tx_btc">View on blockchain.info</string>
    <string name="tx_detail_view_on_blockdozer_tx_bcc">View on blockdozer.com</string>
    <string name="tx_detail_view_on_blockchain_tx_ltc">View on okcoin.cn</string>
    <string name="tx_detail_view_on_blockchain_tx_doge">View on dogechain.info</string>
    <string name="tx_detail_view_on_etherscan_tx_eth">View on etherscan.io</string>
    <string name="tx_detail_view_on_qtuminfo_tx_qtum">View on qtum.info</string>
    <string name="tx_detail_view_on_btgexp_tx_qtum">View on btgexp.com</string>
    <string name="tx_detail_view_on_superbtc_tx_sbtc">View on superbtc.org</string>
    <string name="tx_detail_view_on_btcd_tx_bcd">View on btcd.io</string>
    <string name="tx_detail_view_on_explorer_zcha_in_tx_zec">View on explorer.zcha.in</string>
    <string name="tx_detail_view_on_gastracker_io_etc">View on gastracker.io</string>
    <string name="tx_detail_view_on_h_cash_hsr">View on h.cash</string>
    <string name="tx_detail_view_on_dash_tx_dash">View on dash.org</string>
    <string name="tx_detail_view_on_dash_org">View on dash.org</string>
    <string name="tx_detail_view_on_btp">View on exp.btceasypay.com</string>
    <string name="tx_detail_view_on_safe">View on chain.anwang.com</string>
    <string name="tx_detail_view_on_bbc">View on bigbitcoins.org</string>
    <string name="tx_detail_view_on_cdy">View on block.cdy.one</string>
    <string name="tx_detail_view_on_lch">View on litecoincash.tech</string>
    <string name="tx_detail_view_on_btn">View on explorer.btn.org</string>
    <string name="tx_detail_view_on_btv">View on block.bitvote.one</string>
    <string name="tx_detail_view_on_bcx">View on bcx.info</string>
    <string name="tx_detail_view_on_lbtc">View on explorer.lbtc.io</string>
    <string name="tx_detail_view_on_bsv">View on svblox.com</string>
    <string name="tx_detail_view_on_bcha">View on blockchair.com</string>
    <string name="tx_detail_view_on_bscscan">View on bscscan.com</string>
    <string name="tx_detail_view_on_hecochain">View on hecoinfo.com</string>
    <string name="data_ok">ok</string>
    <string name="tx_ok">ok</string>
    <string name="tx_not">Tx Not Handled</string>
    <string name="tx_fail">Tx Failed</string>
    <string name="tx_empty">tx is empty</string>
    <string name="balance_no">balance is not enough</string>
    <string name="address_batch_index">Batch No %1$s</string>
    <string name="account_hotsend">Hot Send Account</string>
    <string name="account_cold_receive">Cold Receive Account</string>
    <string name="address_hot_send">Hot Send Address</string>
    <string name="address_cold_receive">Cold Receive Address</string>
    <string name="unable_access_network">Unable access network</string>
    <string name="token_expired">Token Expired!</string>
    <string name="user_not_found">User Not Found</string>
    <string name="server_exception">Server Exception</string>
    <string name="dialog_setted">Setted</string>
    <string name="dialog_prompt_ok">I know it</string>
    <string name="dialog_sms_permiss_confirm"><![CDATA[Please open access to read and write sms in Setting->Application]]></string>
    <string name="dialog_admin_phone_confirm">Please must not set the administrator phone number to local machine number!</string>
    <string name="dialog_close_loop_confirm">Stop Loop?</string>
    <string name="dialog_export_log_confirm">Export Log?</string>

    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
    <string name="setting_phone_number">Setting Phone No</string>
    <string name="setting_phone_number1_hint">Chaincloud Phone No1</string>
    <string name="setting_phone_number2_hint">Chaincloud Phone No2</string>
    <string name="setting_phone_admin_hint">Admin Phone No</string>
    <string name="save">Save</string>
    <string name="establish_channel">Establish Channel</string>
    <string name="setting_passwd">Setting Passwd</string>
    <string name="setting_passwd_hint">Tx Passwd</string>
    <string name="setting_loop_internal_hint">Loop Internal(s)</string>
    <string name="setting_sms_observer_type">Change sms observer type(%1s)</string>
    <string name="setting_loop_internal">Setting loop internal(s)</string>
    <string name="setting_balance_threshold">Setting balance threshold</string>
    <string name="setting_export_log">Export Log</string>
    <string name="setting_vweb_domain">VWEB Domain</string>
    <string name="setting_channel">Setting Channel</string>
    <string name="setting_token">Setting Token</string>
    <string name="message_test_once">Test Once</string>
    <string name="message_stop_loop">Stop Loop</string>
    <string name="message_start_loop">Start Loop</string>
    <string name="message_unbund">Unbundle</string>
    <string name="message_bund">Bundle</string>
    <string name="message_newest_channelid">Newest VC Channel ID: </string>
    <string name="setting_token_cold">Cold Token</string>
    <string name="setting_token_hot">Hot Token</string>
    <string name="setting_token_cold_alt">Alt Cold Token</string>
    <string name="setting_token_hot_alt">Alt Hot Token</string>
    <string name="setting_token_vtest">VWEB Token</string>
    <string name="setting_address_check_stop">Stop Address Check</string>
    <string name="setting_address_check_start">Start Address Check</string>
    <string name="setting_domain_vweb">VWeb Domain</string>
    <string name="switch_coin">switch coin(%1s)</string>
    <string name="eth_fee">gas: %1$s \ngasPrice: %2$s \ngasUsed: %3$s</string>

    <string name="setting_sms_observer_prompt">In order to be able to use normal, please switch when the normal type not work. Switch now?</string>
    <string name="balance_threshold_hint">When the value is less than zero, we will close reminder function</string>
</resources>
